--- a/demos/completed/index.html
+++ b/demos/completed/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no" />
   <title>ArcGIS API for JavaScript: Building Your Own Widget</title>
   <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/css/main.css" />
-  <link rel="stylesheet"
-    href="https://s3-us-west-1.amazonaws.com/patterns.esri.com/files/calcite-web/1.2.5/css/calcite-web.min.css" />
-  <link rel="stylesheet" href="./app/css/main.css" />
+  <link rel="stylesheet" href="./app/css/LayerFx.css" />
   <style>
     html,
     body,
@@ -40,127 +38,37 @@
   <script>
     require([
       "esri/Map",
-      "esri/views/SceneView",
-      "esri/layers/ElevationLayer",
-      "esri/layers/TileLayer",
+      "esri/views/MapView",
       "esri/layers/FeatureLayer",
       "demo/LayerFX"
     ], function (
       Map,
-      SceneView,
-      ElevationLayer,
-      TileLayer,
+      MapView,
       FeatureLayer,
       LayerFX
     ) {
-      const marsElevation = new ElevationLayer({
-        url:
-          "https://astro.arcgis.com/arcgis/rest/services/OnMars/MDEM200M/ImageServer",
-        copyright:
-          "NASA, ESA, HRSC, Goddard Space Flight Center, USGS Astrogeology Science Center, Esri",
-      });
 
-      const marsImagery = new TileLayer({
-        url:
-          "https://astro.arcgis.com/arcgis/rest/services/OnMars/MDIM/MapServer",
-        title: "Imagery",
-        copyright: "USGS Astrogeology Science Center, NASA, JPL, Esri",
+      const layer = new FeatureLayer({
+        url: "https://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/rest/services/BLS_Monthly_Unemployment_Current_14_Months/FeatureServer/2",
+        minScale: 0,
+        maxScale: 0
       });
 
       const map = new Map({
-        ground: {
-          layers: [marsElevation],
-        },
-        layers: [marsImagery],
+        basemap: "dark-gray-vector",
+        layers: [layer]
       });
 
-      const view = new SceneView({
-        map: map,
+      const view = new MapView({
         container: "viewDiv",
-        qualityProfile: "high",
-        // setting the spatial reference for Mars_2000 coordinate system
-        spatialReference: {
-          wkid: 104971,
-        },
-        camera: {
-          position: {
-            x: 27.63423,
-            y: -6.34466,
-            z: 1281525.766,
-            spatialReference: {
-              wkid: 104971,
-            },
-          },
-          heading: 332.28,
-          tilt: 37.12,
-        },
+        map: map,
+        center: [-100, 40],
+        zoom: 3
       });
 
-      const cratersLayer = new FeatureLayer({
-        url:
-          "https://services.arcgis.com/P3ePLMYs2RVChkJx/ArcGIS/rest/services/Mars_Nomenclature_Mountains/FeatureServer",
-        definitionExpression: "type = 'Crater, craters'",
-        title: "Craters",
-        renderer: {
-          type: "simple",
-          symbol: {
-            type: "polygon-3d",
-            symbolLayers: [
-              {
-                type: "fill",
-                material: { color: [255, 255, 255, 0.1] },
-                outline: {
-                  color: [0, 0, 0, 0.4],
-                  size: 2,
-                },
-              },
-            ],
-          },
-        },
-        labelingInfo: [
-          {
-            labelPlacement: "above-center",
-            labelExpressionInfo: { expression: "$feature.NAME" },
-            symbol: {
-              type: "label-3d",
-              symbolLayers: [
-                {
-                  type: "text",
-                  material: {
-                    color: [0, 0, 0, 0.9],
-                  },
-                  halo: {
-                    size: 2,
-                    color: [255, 255, 255, 0.7],
-                  },
-                  font: {
-                    size: 10,
-                  },
-                },
-              ],
-              verticalOffset: {
-                screenLength: 40,
-                maxWorldLength: 500000,
-                minWorldLength: 0,
-              },
-              callout: {
-                type: "line",
-                size: 0.5,
-                color: [255, 255, 255, 0.9],
-                border: {
-                  color: [0, 0, 0, 0.3],
-                },
-              },
-            },
-          },
-        ],
-      });
+      var layerFX = new LayerFX({ layer, view });
 
-      map.add(cratersLayer);
-
-      var fx = new LayerFX({ });
-
-      view.ui.add(fx, "top-right");
+      view.ui.add(layerFX, "top-right");
 
       // add to window for demo
       window.layerFX = layerFX;
