--- a/demos/completed/index.html
+++ b/demos/completed/index.html
@@ -66,7 +66,7 @@
         zoom: 3
       });
 
-      var layerFX = new LayerFX({ layer, view });
+      var layerFX = new LayerFX({ layer });
 
       view.ui.add(layerFX, "top-right");
 
