--- a/demos/completed/index.html
+++ b/demos/completed/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no" />
   <title>ArcGIS API for JavaScript: Building Your Own Widget</title>
   <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/css/main.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./app/css/LayerFx.css" />
+
   <style>
     html,
     body,
