--- a/slides/index.html
+++ b/slides/index.html
@@ -6,44 +6,37 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <title>Building Your Own Widget with the ArcGIS API for JavaScript</title>
+  <title>ArcGIS API for JavaScript: Building Your Own Widget</title>
 
-  <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/css/reveal.css">
-  <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/css/theme/dev-summit-2021.css">
-  <link rel="stylesheet" href="./css/slides.css">
+  <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/dist/reset.css">
+  <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/dist/reveal.css">
+  <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/dist/theme/dev-summit-2021.css">
 
-  <!-- Theme used for syntax highlighting of code -->
-  <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/lib/css/zenburn.css">
+  <link rel="stylesheet" href="../node_modules/esri-reveal.js-templates/plugin/highlight/zenburn.css" id="highlight-theme">
 
-  <!-- Printing and PDF exports -->
-  <script>
-    var link = document.createElement( 'link' );
-    link.rel = 'stylesheet';
-    link.type = 'text/css';
-    link.href = window.location.search.match( /print-pdf/gi ) ? '../node_modules/esri-reveal.js-templates/css/print/pdf.css' : '../node_modules/esri-reveal.js-templates/css/print/paper.css';
-    document.getElementsByTagName( 'head' )[0].appendChild( link );
-  </script>
+  <style>
+      .reveal h1 {
+          font-size: 1.5em;
+      }
+  </style>
 </head>
 <body>
   <div class="reveal">
     <div class="slides">
       <!-- Slides are derived from external markdown -->
-      <section
-        data-markdown="index.md"
-        data-separator="^\r?\n---\r?\n"
-        data-separator-vertical="^\r?\n------\r?\n"
-        data-background="../node_modules/esri-reveal.js-templates/img/2021/devsummit/bg-2.png"
-      ></section>
+      <section data-markdown="index.md" data-separator="^\r?\n---\r?\n" data-separator-vertical="^\r?\n------\r?\n" data-background="../node_modules/esri-reveal.js-templates/img/2021/dev-summit/bg-2.png">
+      </section>
     </div>
   </div>
 
-  <script src="../node_modules/esri-reveal.js-templates/js/reveal.js"></script>
+  <script type="module">
+    import Reveal from "../node_modules/esri-reveal.js-templates/dist/reveal.esm.js";
+    import Markdown from "../node_modules/esri-reveal.js-templates/plugin/markdown/markdown.esm.js";
+    import Notes from "../node_modules/esri-reveal.js-templates/plugin/notes/notes.esm.js";
+    import Highlight from "../node_modules/esri-reveal.js-templates/plugin/highlight/highlight.esm.js";
 
-  <script>
-    // More info about config & dependencies:
-    // - https://github.com/hakimel/reveal.js#configuration
-    // - https://github.com/hakimel/reveal.js#dependencies
-    Reveal.initialize({
+    let deck = new Reveal({ plugins: [Markdown, Notes, Highlight] })
+    deck.initialize({
       // This height and width are here for the left-aligned title slide.
       // If you do not want that, you can remove these two settings and
       // the presentation will be closer to OOTB-Reveal.js:
@@ -51,12 +44,6 @@
       height: '100%',
 
       history: true,
-      dependencies: [
-        { src: '../node_modules/esri-reveal.js-templates/plugin/markdown/marked.js' },
-        { src: '../node_modules/esri-reveal.js-templates/plugin/markdown/markdown.js' },
-        { src: '../node_modules/esri-reveal.js-templates/plugin/notes/notes.js', async: true },
-        { src: '../node_modules/esri-reveal.js-templates/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-      ]
     });
   </script>
 </body>
