--- a/demos/completed/index.html
+++ b/demos/completed/index.html
@@ -37,57 +37,7 @@
   </script>
   <script src="https://js.arcgis.com/next"></script>
   <script>
-    require([
-      "esri/intl",
-      "esri/Map",
-      "esri/views/MapView",
-      "esri/layers/FeatureLayer",
-      "demo/LayerFX"
-    ], function (
-      intl,
-      Map,
-      MapView,
-      FeatureLayer,
-      LayerFX
-    ) {
-
-      const layer = new FeatureLayer({
-        url: "https://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/rest/services/BLS_Monthly_Unemployment_Current_14_Months/FeatureServer/2",
-        minScale: 0,
-        maxScale: 0
-      });
-
-      const map = new Map({
-        basemap: "dark-gray-vector",
-        layers: [layer]
-      });
-
-      const view = new MapView({
-        container: "viewDiv",
-        map: map,
-        center: [-100, 40],
-        zoom: 3
-      });
-
-      // register message bundle loader for LayerFX messages
-      intl.registerMessageBundleLoader({
-        pattern: "esri/demo/app/",
-        async fetchMessageBundle(bundleId, locale) {
-          locale = intl.normalizeMessageBundleLocale(locale);
-          const relativePath = bundleId.replace("esri/demo/", "");
-          const bundlePath = `./${relativePath}_${locale}.json`;
-          const response = await fetch(bundlePath);
-          return response.json();
-        }
-      });
-
-      var layerFX = new LayerFX({ layer });
-
-      view.ui.add(layerFX, "top-right");
-
-      // add to window for demo
-      window.layerFX = layerFX;
-    });
+    require(["main"]);
   </script>
 </head>
 
