--- a/demos/completed/index.html
+++ b/demos/completed/index.html
@@ -37,7 +37,7 @@
   </script>
   <script src="https://js.arcgis.com/next"></script>
   <script>
-    require(["main"]);
+    require(["demo"]);
   </script>
 </head>
 
